# GEAK

./: LICENSE.md  README.md  pyproject.toml  requirements.txt  test.py
geak_agent/: __init__.py  main_gaagent.py  main_gaagent_rocm.py
geak_agent/agents/: GaAgent.py  GaAgent_mlu.py  __init__.py
geak_agent/configs/: mlu_gaagent_config.yaml  tritonbench_gaagent_config.yaml
geak_agent/dataloaders/: ProblemState.py  TritonBench.py  __init__.py  mlu.py
geak_agent/dataloaders/TB_eval/: check_correctness.py  correctness.py  utils.py
geak_agent/models/: Claude.py  Gemini.py  OpenAI.py  __init__.py
geak_agent/prompts/: prompt_for_generation.py  prompt_for_reflection.py
tutorial/: GEAK_agent_tutorial.ipynb
tutorial/data/: instructions.json
tutorial/data/kernels/: add_example.py  embedding_triton_kernel.py  rmsnorm.py  sin_computation.py
tutorial/data/perf_scripts/: add_example_perf.py  embedding_triton_kernel_perf.py  performance_utils.py  rmsnorm_perf.py  sin_computation_perf.py
tutorial/outputs/: tutorial_results_0.jsonl  tutorial_results_1.jsonl  tutorial_results_2.jsonl  tutorial_results_5.jsonl  tutorial_results_mem_0.json  tutorial_results_mem_1.json  tutorial_results_mem_2.json  tutorial_results_mem_3.json  tutorial_results_mem_4.json  tutorial_results_mem_5.json
tutorial/tutorial_utils/: tutorial_dataloader.py
